# AVML

./: CMakeLists.txt
include/avml/: AVML.hpp  Affine.hpp  Math.hpp  Matrices.hpp  Points.hpp  Power_of_two.hpp  Quaternions.hpp  Transforms.hpp  Vectors.hpp
include/avml/impl/: Array.hpp  Capabilities.hpp  DEF_math.ipp  IMPL_capabilities.hpp  IMPL_math.hpp  IMPL_matrices.hpp  IMPL_points.hpp  IMPL_shared.hpp  IMPL_transforms.hpp  IMPL_vectors.hpp  Math.hpp  Matrices.hpp  Point.hpp  Quaternion2D.hpp  Shared.hpp  Transforms.hpp  Unit_vector.hpp  Util.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  Vector.hpp  Vectors.hpp  mat2x2f.ipp  mat3x3f.ipp  mat4x4f.ipp  matrix2x2f.ipp  matrix3x3f.ipp  matrix4x4f.ipp  transformsf.hpp  uvec2f.ipp  uvec3f.ipp  uvec4f.ipp  vec2f.ipp  vec3f.ipp  vec4f.ipp  vec4i.ipp
include/avml/impl/SSE2/: SSE_point.hpp  SSE_unit_vector.hpp  SSE_vector.hpp
include/avml/impl/default/: DEF_affine.tpp  DEF_affine2f.hpp  DEF_affine2f.ipp  DEF_affine3f.hpp  DEF_affine3f.ipp  DEF_axis_rotationf.hpp  DEF_axis_rotationf.ipp  DEF_math.hpp  DEF_math.ipp  DEF_matrix.tpp  DEF_matrix2x2.ipp  DEF_matrix2x2f.hpp  DEF_matrix2x2f.ipp  DEF_matrix3x3.ipp  DEF_matrix3x3f.hpp  DEF_matrix3x3f.ipp  DEF_matrix4x4.ipp  DEF_matrix4x4f.hpp  DEF_matrix4x4f.ipp  DEF_point.tpp  DEF_pt2f.hpp  DEF_pt3f.hpp  DEF_pt4f.hpp  DEF_quaternionf.ipp  DEF_transformsf.ipp  DEF_uvec2.ipp  DEF_uvec2f.hpp  DEF_uvec2f.ipp  DEF_uvec3.ipp  DEF_uvec3f.hpp  DEF_uvec3f.ipp  DEF_uvec4.ipp  DEF_uvec4f.hpp  DEF_uvec4f.ipp  DEF_vec2.ipp  DEF_vec2f.hpp  DEF_vec2f.ipp  DEF_vec3.ipp  DEF_vec3f.hpp  DEF_vec3f.ipp  (+7 more)
include/avml/impl/generic/: mat2x2r.hpp  mat3x3r.hpp  mat4x4r.hpp  uvec2r.hpp  (+8 more)
tests/: AVML_tests.cpp  Array_tests.hpp  Matrix_tests.hpp  Point_tests.hpp  Unit_vector_tests.hpp  Vector_tests.hpp
tests/affine/: Affine3Df_tests.hpp
tests/matrix/: Mat2x2f_tests.hpp  Mat3x3f_tests.hpp  Mat4x4f_tests.hpp
tests/vector/: uvec2f_tests.hpp  vec2i_tests.hpp
(+7 files in other folders)
